# cpp-oop-labs-maii-7

./: CMakeLists.txt  main.cpp
include/: Bear.h  Knight.h  NPC.h  NPCFactory.h  Observer.h  Orc.h  ThreadedGame.h
src/: Bear.cpp  Knight.cpp  NPC.cpp  NPCFactory.cpp  Observer.cpp  Orc.cpp  ThreadedGame.cpp
test/: tests.cpp
